<resources>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bottom_name1">首页</string>
    <string name="bottom_name2">发现</string>
    <string name="bottom_name3">福利中心</string>
    <string name="bottom_name4">公众号</string>
    <string name="bottom_name5">我的</string>
    <string name="confirm">确定</string>
    <string name="home_search">搜索你想要的BT游戏吧</string>
    <string name="cancel">取消</string>
    <string name="done">完成</string>
    <string name="authentication">认证</string>
    <string name="setting_base">基本设置</string>
    <string name="setting_other">其他设置</string>
    <string name="setting_top">显示置顶文章</string>
    <string name="setting_toptip">开启后首页会显示置顶文章</string>
    <string name="choose_theme_color">主题颜色</string>
    <string name="choose_theme_color_summary">设置App的主题颜色</string>
    <string name="setting_about">关于</string>
    <string name="setting_project">开源项目</string>
    <string name="setting_version">版本</string>
    <string name="setting_exit">退出</string>
    <string name="clear_cache">清除缓存</string>
    <string name="setting_mode">列表动画</string>
    <string name="setting_modetip">无</string>
    <string name="copyright">版权声明</string>
    <string name="must_play_list">必玩榜</string>
    <string name="new_tour_weekly_list">新游周榜</string>
    <string name="today">今天</string>
    <string name="shot">拍摄</string>
    <string name="view_big_picture">查看大图</string>
    <string name="yesterday">昨天</string>
    <string name="tomorrow">明天</string>
    <string name="open_time">开服时间</string>
    <string name="txt_game_introduce">游戏介绍</string>
    <string name="write_evaluation">写评论</string>
    <string name="account_number_and_security">账号和安全</string>
    <string name="system_permission_setting">系统权限设置</string>
    <string name="my_games">我的游戏</string>
    <string name="my_attention">我的关注</string>
    <string name="my_customer_service">我的客服</string>
    <string name="my_platform_currency">我的平台币</string>
    <string name="my_gift_bag">我的礼包</string>
    <string name="recharge_rebate">充值返利</string>
    <string name="mission_hall">任务大厅</string>
    <string name="setting">设置</string>
    <string name="recommend">推荐</string>
    <string name="reply_all">全部回复</string>
    <string name="txt_send">发布</string>
    <string name="now_score">当前积分</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="btn_points_mall">积分商城</string>
    <string name="txt_membership_privileges">会员特权</string>
    <string name="txt_earn_points">赚积分</string>
    <string name="txt_next_step">下一步</string>
    <string name="txt_get_code">获取验证码</string>
    <string name="account_number">账号</string>
    <string name="avatar_frame">头像框</string>
    <string name="app_account_name">奇葩账号</string>
    <string name="nickname">昵称</string>
    <string name="album_selection">相册选择</string>
    <string name="mobile_phone">手机</string>
    <string name="real_name_authentication">实名认证</string>
    <string name="password_management">密码管理</string>
    <string name="birthday_date">生日日期</string>
    <string name="gender">性别</string>
    <string name="full_name">姓名</string>
    <string name="id_card_number">身份证号</string>
    <string name="input_user_name">请输入姓名</string>
    <string name="input_user_id_card">请输入您的身份证号</string>
    <string name="log_out">退出登录</string>
    <string name="login_title">登陆</string>
    <string name="cancel_account">注销账号</string>
    <string name="head_portrait">头像</string>
    <string name="one_click_login">一键登录</string>
    <string name="password_login">密码登陆</string>
    <string name="pay_open_tips">开通即回本，每日再领50平台币</string>
    <string name="activate_now">立即开通</string>
    <string name="service_selection">服务选择</string>
    <string name="unavailable_game_list">不可用游戏名单</string>
    <string name="tv_money_feedback">开通即返回<font color="#ff0000">%1$s</font>平台币</string>
    <string name="tv_money_feedback1">每天领取<font color="#ff0000">%1$s</font>平台币</string>
    <string name="txt_not_get_code"><![CDATA[收不到短信?点击获取<font color="#FF03DAC5">语音验证码</font>]]></string>
    <string name="account_appeal">账号申诉</string>
    <string name="qipa_question">奇葩问题</string>
    <string name="payment_problem">支付问题</string>
    <string name="game_exception">游戏异常</string>
    <string name="select_question_type">选择问题类型</string>
    <string name="recharge_account">充值账号: %1$s</string>
    <string name="complaints_suggestion_tips"><font color="#E91E63">注意:</font>此处只做投诉与建议问题处理,其它游戏问题,
        请在对应的问题工单进行提交,才能得到有效处理哦</string>
    <string name="customer_service_nickname"><font color="#E91E63">*</font>客服昵称:</string>
    <string name="customer_service_nickname_phone"><font color="#E91E63">*</font>手机号码:</string>
    <string name="problem_description"><font color="#E91E63">*</font>问题描述</string>
    <string name="upload_pic">上传图片(最多9张)</string>
    <string name="my_platform_currency_num">我的平台币:%1$s<font color="#E91E63">含%2$s赠币</font></string>
    <string name="recharge_quantity">充值数量(1元=10平台币)</string>
    <string name="please_select_payment_method">请选择支付方式</string>
    <string name="special_reminder">特殊提醒</string>
    <string name="btn_pay">支付</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="save">保存</string>
    <string name="required">必填</string>
    <string name="submit">提交</string>
    <string name="loading">加载中&#8230;</string>
    <string name="request">请求中&#8230;</string>
    <string name="finish">完成</string>
    <string name="em_main_title_home">会话</string>
    <string name="em_main_title_friends">通讯录</string>
    <string name="em_main_title_discover">发现</string>
    <string name="em_main_title_me">我</string>
    <string name="attach_user_card">名片</string>
    <string name="demo_title_image_grid">拍摄及视频</string>
    <string name="em_dialog_default_title">提示</string>
    <string name="main_home">首页</string>
    <string name="main_friend">联系人</string>
    <string name="main_set">设置</string>
    <string name="em_login_name_hint">用户名</string>
    <string name="em_login_password_hint">密码</string>
    <string name="em_login_token_hint">token</string>
    <string name="em_login_btn">登\u0020录</string>
    <string name="em_login_tv_register">注册账号</string>
    <string name="em_login_tv_token">token登录</string>
    <string name="em_login_tv_pwd">密码登录</string>
    <string name="em_login_tv_server_set">服务器配置</string>
    <string name="em_login_btn_info_incomplete">用户名或者密码不能为空</string>
    <string name="em_login_failed">登录失败</string>
    <string name="em_login_agreement">同意《环信服务条款》与《环信隐私协议》</string>
    <string name="em_register_btn">注\u0020册</string>
    <string name="em_register_password_confirm_hint">确认密码</string>
    <string name="em_register_failed">注册失败</string>
    <string name="em_register_success">注册成功，请登录</string>
    <string name="em_register_privacy_agreement_url">http://www.easemob.com/protocol</string>
    <string name="em_register_service_agreement_url">http://www.easemob.com/agreement</string>
    <string name="em_password_confirm_error">您输入的密码不一致，请重新输入</string>
    <string name="em_error_network_error">当前网络不可用</string>
    <string name="em_error_not_login">未登录过环信</string>
    <string name="em_error_parse_error">解析错误</string>
    <string name="em_error_err_unknown">网络问题请稍后重试</string>
    <string name="em_err_image_android_min_version">上传图片只支持4.4版本以上</string>
    <string name="em_err_file_not_exist">文件不存在</string>
    <string name="em_add_self_error">不能添加自己</string>
    <string name="em_friend_error">此用户已是你的好友</string>
    <string name="em_friend_black_error">此用户已是你好友(被拉黑状态)，从黑名单列表中移出即可</string>
    <string name="em_delete_sys_msg_error">删除失败或不存在该消息</string>
    <string name="em_error_group_no_members">没有群组成员</string>
    <string name="em_error_user_already_exist">注册用户名已存在，请重新输入</string>
    <string name="demo_error_user_authentication_failed">您输入的用户名或密码不正确</string>
    <string name="demo_error_user_already_exist">注册用户名已存在，请重新输入</string>
    <string name="demo_error_file_too_large">附件大小不能超过10M</string>
    <string name="em_server_set_title">使用自定义服务器？</string>
    <string name="em_server_set_server_hint">demo已经绑定以下环境设置，如果需要修改，请重启App进行设置。</string>
    <string name="em_server_set_appkey">Appkey</string>
    <string name="em_server_set_apns_cert_name">apns证书名称</string>
    <string name="em_server_set_specify_server">使用私有服务器:</string>
    <string name="em_server_set_server_address">IM服务器地址</string>
    <string name="em_server_set_server_port">端口号</string>
    <string name="em_server_set_rest_server_address">REST服务器地址</string>
    <string name="em_server_set_https_set">只使用Https:</string>
    <string name="em_server_set_button_reset_text">重置服务器设置</string>
    <string name="em_server_set_dialog_reset">是否恢复默认服务器设置？</string>
    <string name="em_server_set_button_text">保\u0020存\u0020配\u0020置</string>
    <string name="em_server_set_appkey_empty_hint">请设置Appkey</string>
    <string name="em_server_set_im_server_empty_hint">请设置IM服务器地址</string>
    <string name="em_server_set_im_port_empty_hint">请设置IM端口号</string>
    <string name="em_server_set_rest_server_empty_hint">请设置REST服务器地址</string>
    <string name="em_empty_layout_content">寻找自我 保持本色</string>
    <string name="were_mentioned">[有人@我]</string>
    <string name="were_not_send_msg">[草稿]</string>
    <string name="em_chat_et_hint">输入了什么东西</string>
    <string name="em_search_text_hint">搜索</string>
    <string name="em_conversation_menu_video">音视频会议</string>
    <string name="em_conversation_menu_group">创建群组</string>
    <string name="em_conversation_menu_friend">添加好友</string>
    <string name="em_conversation_menu_search_friend">添加好友</string>
    <string name="em_conversation_menu_search_group">找群</string>
    <string name="em_conversation_menu_scan">扫一扫</string>
    <string name="em_conversation_system_notification">系统通知</string>
    <string name="demo_system_agree_invite">您已同意%1$s的好友请求</string>
    <string name="demo_system_agree_remote_user_apply_to_join_group">您已同意%1$s的入群申请</string>
    <string name="demo_system_agree_received_remote_user_invitation">您已同意%1$s的入群邀请</string>
    <string name="demo_system_decline_invite">您已拒绝%1$s的好友请求</string>
    <string name="demo_system_decline_remote_user_apply_to_join_group">您已拒绝%1$s的入群申请</string>
    <string name="demo_system_decline_received_remote_user_invitation">您已拒绝%1$s的入群邀请</string>
    <string name="demo_system_other_decline_invite">%1$s拒绝了您的好友请求</string>
    <string name="demo_system_other_decline_remote_user_apply_to_join_group">%1$s拒绝了您的入群申请</string>
    <string name="demo_system_other_decline_received_remote_user_invitation">%1$s拒绝了您的入群邀请</string>
    <string name="em_add_contact_item_button_text">添加好友</string>
    <string name="em_add_contact_item_button_text_added">已添加</string>
    <string name="em_add_contact_not_add_myself">不能添加自己</string>
    <string name="em_add_contact_user_already_in_contactlist">此用户已是你好友(被拉黑状态)，从黑名单列表中移出即可</string>
    <string name="em_add_contact_this_user_is_already_your_friend">此用户已是你的好友</string>
    <string name="lang_english">English</string>
    <string name="lang_arab">阿拉伯</string>
    <string name="lang_chs">简体中文</string>
    <string name="lang_chs_tw">繁体中文</string>
    <string name="more_language">多语言</string>
    <string name="please_enter_the_verification_code">请输入验证码</string>
</resources>