<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_280"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/invite_sign_rule_dialog"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/mainColor"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/real_name_authentication"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        >

        <TextView
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_11"
            android:textColor="@color/background"
            android:textStyle="bold"
            android:gravity="center_vertical"

            android:text="@string/full_name"
            />

        <EditText
            android:id="@+id/input_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/sp_11"
            android:hint="@string/input_user_name"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        >

        <TextView
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_11"
            android:textColor="@color/background"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:text="@string/id_card_number"
            />

        <EditText
            android:id="@+id/input_id_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/sp_11"
            android:inputType="number"
            android:hint="@string/input_user_id_card"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/bind_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_11"
        android:text=""
        android:textColor="@color/gray_61"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@drawable/shape_btn_grey_game_bg"
        >

        <EditText
            android:id="@+id/edit_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingLeft="@dimen/dp_10"
            android:hint="@string/please_enter_the_verification_code"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/sp_11"
            android:layout_weight="1"
            />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="center_vertical"
            android:background="@color/background"
            android:layout_marginRight="@dimen/dp_10"
            />
        <TextView
            android:id="@+id/realname_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/sp_11"
            android:text="@string/txt_get_code"
            android:layout_marginRight="@dimen/dp_10"
            android:textColor="@color/teal_200"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_authentication"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_30"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_13"
        android:text="@string/authentication"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/bg_button_green_round_20dp"
        />


</LinearLayout>