<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.qipa.newboxproject.viewmodel.state.SettingModel" />
        <variable
            name="click"
            type="com.qipa.newboxproject.ui.fragment.me.set.SettingFragment.ProxyClick" />

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorCC"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@color/teal_200"
            />

        <include layout="@layout/include_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_number"
            android:textSize="@dimen/sp_11"
            android:textColor="@color/gray_61"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginBottom="@dimen/dp_6"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:orientation="vertical"
            android:background="@drawable/bg_button_2_round_10dp"
            >

             <com.qipa.newboxproject.app.weight.ImageTextButton
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_45"
                 android:onClick="@{()->click.accountAndsecurity()}"
                 app:icon="@mipmap/ic_launcher"
                 app:label="@string/account_number_and_security"
                 />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/gray_1A000000"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_25"
                />
            <com.qipa.newboxproject.app.weight.ImageTextButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:onClick="@{()->click.system_permission_setting()}"
                app:icon="@mipmap/ic_launcher"
                app:label="@string/system_permission_setting"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_other"
            android:textSize="@dimen/sp_11"
            android:textColor="@color/gray_61"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginBottom="@dimen/dp_6"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:orientation="vertical"
            android:background="@drawable/bg_button_2_round_10dp"
            >

            <com.qipa.newboxproject.app.weight.ImageTextButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:onClick="@{()->click.more_language()}"
                app:icon="@mipmap/ic_launcher"
                app:label="@string/more_language"
                />

        </LinearLayout>

    </LinearLayout>


</layout>