<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="vm"
            type="com.qipa.newboxproject.viewmodel.state.MyCustomerServiceModel" />
        
        <variable
            name="click"
            type="com.qipa.newboxproject.ui.fragment.me.MyCustomerServiceFragment.ProClick" />

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <com.cy.translucentparent.StatusBarView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"/>
        <include layout="@layout/include_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="问题大类"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal"
            >
            <com.qipa.newboxproject.app.weight.textview.ImageTextSmallButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{() -> click.clickAccount_appeal()}"
                app:icon="@mipmap/ic_launcher"
                app:label="@string/account_appeal"
                />

            <com.qipa.newboxproject.app.weight.textview.ImageTextSmallButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:icon="@mipmap/ic_launcher"
                app:label="@string/qipa_question"
                />
            <com.qipa.newboxproject.app.weight.textview.ImageTextSmallButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:icon="@mipmap/ic_launcher"
                app:label="@string/payment_problem"
                />
            <com.qipa.newboxproject.app.weight.textview.ImageTextSmallButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:icon="@mipmap/ic_launcher"
                app:label="@string/game_exception"
                />
        </LinearLayout>

    </LinearLayout>

</layout>