<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="vm"
            type="com.qipa.newboxproject.viewmodel.state.RechargeInterfaceModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <com.cy.translucentparent.StatusBarView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"/>
        <include layout="@layout/include_back"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/pay_open_tips"
                android:textColor="@color/teal_200"
                android:textSize="@dimen/sp_10" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_30"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/sp_11"
                android:background="@drawable/bg_round_white_4dp"
                android:text="@string/activate_now"
                android:textColor="@color/teal_200" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_selection"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/sp_11"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailable_game_list"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/dp_10"
                android:drawableRight="@mipmap/my_user_next_icon"
                />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_pay_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_15"
            />
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/white"
            android:text="@string/activate_now"
            android:background="@drawable/shape_btn_cear200_bg_4"
            />


    </LinearLayout>

</layout>