<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="click"
            type="com.qipa.newboxproject.ui.fragment.dis.OpenServiceFragment.ProxyClick" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_yesterday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/bg_ranking_top_tab_color_selector"
                android:background="@drawable/bg_ranking_top_tab_button_selector"
                android:paddingEnd="@dimen/dp_20"
                android:paddingStart="@dimen/dp_20"
                android:paddingTop="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_4"
                android:textSize="@dimen/sp_13"
                android:onClick="@{()->click.yesterday()}"
                android:text="@string/yesterday" />
            <TextView
                android:id="@+id/tv_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/bg_ranking_top_tab_color_selector"
                android:background="@drawable/bg_ranking_top_tab_button_selector"
                android:paddingEnd="@dimen/dp_20"
                android:paddingStart="@dimen/dp_20"
                android:paddingTop="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_4"
                android:textSize="@dimen/sp_13"
                android:onClick="@{()->click.today()}"
                android:layout_marginStart="@dimen/dp_10"
                android:text="@string/today" />

            <TextView
                android:id="@+id/tv_tomorrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/bg_ranking_top_tab_color_selector"
                android:background="@drawable/bg_ranking_top_tab_button_selector"
                android:paddingEnd="@dimen/dp_20"
                android:paddingStart="@dimen/dp_20"
                android:paddingTop="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_4"
                android:textSize="@dimen/sp_13"
                android:onClick="@{()->click.tomorrow()}"
                android:layout_marginStart="@dimen/dp_10"
                android:text="@string/tomorrow" />

            
        </LinearLayout>

    </LinearLayout>
</layout>